log
Sat Mar 19 17:27:05 HSP 2022: 
 tests:  0|6
total_score: 0/70
3a9a19c
Sat Mar 19 19:28:17 HSP 2022: 
 list.c | 45 ++++++++++++++++++++++++++++++++++-----------
 1 file changed, 34 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:42:17: error: expected expression before '>' token
   return list - > current -> data;
                 ^
list.c: In function 'prevList':
list.c:51:28: error: 'List {aka struct List}' has no member named 'prev'
     list -> current = list -> prev;
                            ^~
list.c: In function 'pushCurrent':
list.c:72:10: error: variable or field 'aux' declared void
     void aux = list -> current -> data;
          ^~~
list.c:72:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     void aux = list -> current -> data;
                ^~~~
list.c:75:35: error: comparison between pointer and integer [-Werror]
     while(list -> current -> prev != aux){
                                   ^~
list.c: In function 'nextList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a9918aa
Sat Mar 19 19:29:56 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:51:28: error: 'List {aka struct List}' has no member named 'prev'
     list -> current = list -> prev;
                            ^~
Compilation failed
58dd02a
Sat Mar 19 19:30:33 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3f0d4a2
Sun Mar 20 12:09:15 HSP 2022: 
 list.c | 34 +++++++++++++++++++---------------
 1 file changed, 19 insertions(+), 15 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'prevList':
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b16da17
Sun Mar 20 12:09:50 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
2f47c23
Sun Mar 20 12:16:07 HSP 2022: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d6fe6dd
Sun Mar 20 12:21:13 HSP 2022: 
 list.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|0
dd21f91
Sun Mar 20 12:30:07 HSP 2022: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c:40:3: error: expected identifier or '(' before 'return'
   return NULL;
   ^~~~~~
list.c:41:1: error: expected identifier or '(' before '}' token
 }
 ^
list.c: In function 'pushBack':
list.c:81:10: error: 'List {aka struct List}' has no member named 'last'
     list -> last = nodo;
          ^~
Compilation failed
032f37e
Sun Mar 20 12:32:27 HSP 2022: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
27bc38d
Sun Mar 20 12:47:13 HSP 2022: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|0
4bcc134
Sun Mar 20 12:56:38 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
379b4a5
Sun Mar 20 13:02:25 HSP 2022: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
9a5e6a4
Sun Mar 20 13:04:24 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
389d99a
Sun Mar 20 13:05:29 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b1f2819
Sun Mar 20 13:14:04 HSP 2022: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|0
0d204c9
Sun Mar 20 13:15:11 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
2de7d22
Sun Mar 20 13:32:47 HSP 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
989f7a7
Sun Mar 20 13:38:35 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
079bc8e
Sun Mar 20 13:39:35 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
fb6fb79
Sun Mar 20 13:42:25 HSP 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
cbfc03f
Sun Mar 20 13:43:45 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
4b2e3fa
Sun Mar 20 13:54:29 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
eb4d1c2
Sun Mar 20 13:59:35 HSP 2022: 
 list.c | 28 +++++++---------------------
 1 file changed, 7 insertions(+), 21 deletions(-)
 tests:  0|0
73f3901
Sun Mar 20 14:01:35 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
43291d6
